<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="7" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <include layout = "@layout/fragment_header" />

            <nl.emconsult.wbso2018.layoutElement.MyTextView
                android:id="@+id/textView_aanvraag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/aanvraag_x"
                android:textColor="@color/em_blue"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <nl.emconsult.wbso2018.layoutElement.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/uren"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editText_uren"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:background="@color/grey"
                        android:ems="8"
                        android:gravity="center"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_rda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <nl.emconsult.wbso2018.layoutElement.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/kosten"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editText_kosten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:background="@color/grey"
                        android:ems="8"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:text="" />

                    <nl.emconsult.wbso2018.layoutElement.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/uitgaven"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editText_uitgaven"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:background="@color/grey"
                        android:ems="8"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="400dp"
                        android:layout_marginTop="12dp"
                        android:background="@color/em_blue"
                        android:scrollbars="none"
                        android:text="@string/berekenen"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout = "@layout/fragment_footer" />

</LinearLayout>