<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="7" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include layout = "@layout/fragment_header" />

            <nl.emconsult.wbso2018.layoutElement.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="Uw voordeel"
                android:textColor="@color/em_blue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <nl.emconsult.wbso2018.layoutElement.MyTextView
                android:id="@+id/textView_totaal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/em_blue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <nl.emconsult.wbso2018.layoutElement.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="Berekening:"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/results_period1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@color/em_blue"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TableRow
                        android:id="@+id/tableRow_uren"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:weightSum="6" >

                        <TextView
                            android:id="@+id/textView_uren_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@string/uren"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/textView_uren"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="right"
                            android:text="0"
                            android:textColor="@color/white" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow_uurloon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView_uurloon_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@string/uurloon"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/textView_uurloon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="right"
                            android:text="0"
                            android:textColor="@color/white" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ffffff" />

                    <TableRow
                        android:id="@+id/tableRow_soloon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView_soloon_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@string/SOloon"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/textView_soloon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="right"
                            android:text="0"
                            android:textColor="@color/white" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow_rda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView_rda_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text=""
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/textView_rda"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="right"
                            android:text="0"
                            android:textColor="@color/white" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ffffff" />

                    <TableRow
                        android:id="@+id/tableRow_soloonkosten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView_soloonkosten_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@string/SOloonkosten"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/textView_soloonkosten"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="right"
                            android:text="0"
                            android:textColor="@color/white" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="#ffffff" />

                    <TableRow
                        android:id="@+id/tableRow_afdrachtvermindering"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView_afdrachtvermindering_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@string/SOAfdrachtvermindering"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView_afdrachtvermindering"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="right"
                            android:text="0"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="#ffffff" />
                </TableLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_per_periode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="24dp"
            android:background="@color/em_blue"
            android:text="Opbrengst per periode"
            android:textColor="@color/white" />
    </LinearLayout>

    <include layout = "@layout/fragment_footer_phone" />

</LinearLayout>